<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/parent_padding"
        android:paddingTop="@dimen/parent_padding"
        android:paddingLeft="@dimen/parent_padding"
        android:paddingRight="@dimen/parent_padding">

        <ImageView

            android:id="@+id/brands_image_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/brands_top"
            android:scaleType="fitCenter"
            android:src="@drawable/brands_top" />



        <TextView
            android:fontFamily="serif-monospace"
            android:id="@+id/headline_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/headline_text"
            style="@style/headline"/>



        <TextView

            android:id="@+id/subtitle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/subtitle"
            style="@style/subtitle"/>



        <EditText

            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterName"
            style="@style/edit_text" />



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_image_15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bmw_q1"
                android:contentDescription="@string/bmw_icon"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/bmw"
                style="@style/brand_image"
                android:scaleType="fitCenter"/>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_image_15dp"
            android:background="@color/backgroundQuestion"
            android:orientation="horizontal">


            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q1"
                style="@style/question_line_number"/>

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/question_one"
                android:textColor="@android:color/white"
                style="@style/question_line_text"/>


        </LinearLayout>

            <RadioGroup

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/background_radioGroup">


                <RadioButton

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_one_answer_one" />


                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_one_answer_two" />

                <RadioButton

                    android:id="@+id/questionOneAnswerThree_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/background_radioGroup"
                    android:text="@string/question_one_answer_three" />

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_one_answer_four" />

            </RadioGroup>


        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/socialMedia_q2"
                android:contentDescription="@string/question_two"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/social_media_four"
                android:scaleType="center"
                android:layout_marginTop="@dimen/marginTop_image_15dp"
                style="@style/brand_image"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundQuestion"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/q2"
                    style="@style/question_line_number"/>

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:text="@string/question_two"
                    style="@style/question_line_text"/>


            </LinearLayout>


            <RadioGroup

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/background_radioGroup">

                <RadioButton

                    android:id="@+id/questionTwoAnswerOne_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_answer_one" />

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_answer_two" />

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_answer_three" />

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_answer_four" />

            </RadioGroup>


        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/starbucks_q3"
                android:contentDescription="@string/question_three"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/starbucks_coffee"
                android:scaleType="centerInside"
                android:layout_marginTop="@dimen/marginTop_image_15dp"
                style="@style/brand_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/question_marginTop_10dp"
                android:background="@color/backgroundQuestion"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/q3"
                    style="@style/question_line_number"/>

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:text="@string/question_three"
                    style="@style/question_line_text"/>

            </LinearLayout>

            <RadioGroup

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/background_radioGroup">

                <RadioButton

                    android:id="@+id/questionThreeAnswerTrue_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_true" />

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_false" />

             </RadioGroup>

             </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/adidas_Puma_q4"
                android:contentDescription="@string/question_four"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/adiuma"
                android:scaleType="centerInside"
                android:layout_marginTop="@dimen/marginTop_image_15dp"
                style="@style/brand_image"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/question_marginTop_10dp"
                android:background="@color/backgroundQuestion"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/q4"
                    style="@style/question_line_number"/>

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:text="@string/question_four"
                    style="@style/question_line_text"/>

            </LinearLayout>


            <RadioGroup

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/background_radioGroup">

                <RadioButton

                    android:id="@+id/questionFourAnswerTrue_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_true" />

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_false" />

            </RadioGroup>

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ikea_q5"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:contentDescription="@string/question_five"
                android:src="@drawable/ikea"
                android:scaleType="center"
                android:layout_marginTop="@dimen/marginTop_image_15dp"
                style="@style/brand_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/question_marginTop_10dp"
                android:background="@color/backgroundQuestion"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/q5"
                    style="@style/question_line_number"/>

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:text="@string/question_five"
                    style="@style/question_line_text"/>



            </LinearLayout>


            <EditText

                android:id="@+id/questionFive_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_five_hint"
                style="@style/edit_q5_text"/>

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/fashion_q6"
                android:contentDescription="@string/question_six"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/fashion_label"
                android:scaleType="fitCenter"
                android:layout_marginTop="@dimen/marginTop_image_15dp"
                style="@style/brand_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/question_marginTop_10dp"
                android:background="@color/backgroundQuestion"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/q6"
                    style="@style/question_line_number"/>

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:text="@string/question_six"
                    style="@style/question_line_text"/>

            </LinearLayout>


            <CheckBox

                android:id="@+id/questionSixAnswerOne_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_six_answer_one" />

            <CheckBox

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_six_answer_two" />

            <CheckBox

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_six_answer_three" />

            <CheckBox

                android:id="@+id/questionSixAnswerFour_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_six_answer_four" />

        </LinearLayout>


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button

                android:id="@+id/submit_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:onClick="submitAnswers"
                android:text="@string/score_button" />


            <Button

                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/submit_answers"
                android:onClick="resetAnswers"
                android:text="@string/reset_button"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                style="@style/try_again_button"/>

            <Button

                android:id="@+id/share_button"
                android:layout_below="@id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="@dimen/marginBottom_brand_image"
                android:onClick="shareResults"
                android:text="@string/share_button" />



        </RelativeLayout>


        <ImageView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/end_brand_image"
            android:scaleType="fitCenter"
            android:src="@drawable/brand_image_end" />

    </LinearLayout>


</ScrollView>